--- a/site/index.html
+++ b/site/index.html
@@ -2,13 +2,9 @@
 <html>
 <head>
 	<meta charset='utf-8'>
-	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
-	<title>Page Title</title>
-	<meta name='viewport' content='width=device-width, initial-scale=1'>
-	<link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-	<script src='main.js'></script>
+	<title>Hello Coursera!</title>
 </head>
 <body>
-	
+	<h1>Hello Coursera! Its a great course!</h1>
 </body>
 </html>
